# final-rule-bot-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  render.yaml  requirements-dev.txt  requirements.txt
api/: routes.py  schemas.py  server.py
chatbot/: bot.py  commands.py  config.py  exceptions.py  formatter.py  history.py  knowledge_loader.py  logger.py  matcher.py  pyproject.toml  session.py  statistics.py  utils.py
chatbot/data/: chat_history.json
chatbot/knowledge/: intents.json  intents_expanded.json  responses.json  responses_expanded.json  synonyms.json  synonyms_expanded.json
core/: __init__.py  logging.py  settings.py
docs/: architecture.md  project_structure.md
frontend/: README.md  index.html  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css
llm/: __init__.py  base.py  gemini_client.py  groq_client.py  huggingface_client.py  openai_client.py  openrouter_client.py  prompts.py  provider_manager.py  router.py
rule-bot-AI/: README.md
scripts/: build_frontend.ps1  generate_kb.py  seed_kb_full.py
services/: chat_service.py
static/css/: style.css
static/js/: app.js  theme.js
templates/: index.html
tests/: test_api.py  test_bot.py  test_gemini_provider.py
tests/.pytest_cache/v/cache/: nodeids
