[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rulebot-ai"
version = "1.0.0"
description = "Professional Rule-Based AI Chatbot built with Python"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "mahnoor shahzad"}
]

[tool.black]
line-length = 79
target-version = ["py314"]

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]